@@ -27,6 +27,10 @@ dependencies {
 }
 
 tasks {
+  test {
+    // suppress warning about byte-buddy-agent being loaded dynamically
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+  }
   compileAotJava {
     with(options) {
       compilerArgs.add("-Xlint:-deprecation,-unchecked,none")
